# tp_c_hw2

./: CMakeLists.txt  README.md  cppcheck_report.txt
.github/workflows/: ci.yml
myaction/: Dockerfile  entrypoint.sh
project/include/: config.h  consistent.h  fill_array.h  parallel.h  prog.h
project/src/: config.c  consistent.c  fill_array.c  main.c  parallel.c  prog.c  prog_parallel.c
tests/: config_test.cpp  consistent_test.cpp  fill_array_test.cpp  parallel_test.cpp  run_prog_test.cpp  stress_test.cpp
